<resources>
    <string name="app_name" translatable="false">U3T4Event</string>
    <string name="tvNewEvent">New Event</string>
    <string name="etEventName">Type an event name</string>
    <string name="tvCurrentData">Current Data</string>
    <string name="btEditEventData">Edit Event Data</string>
    <string name="title_activity_event_data">Event Data</string>
    <string name="tvPriority">Priority</string>
    <string name="rbLow">Low</string>
    <string name="rbNormal">Normal</string>
    <string name="rbHigh">High</string>
    <string name="tvDateTime">Set Date and Time</string>
    <string name="btAccept">Accept</string>
    <string name="btCancel">Cancel</string>
    <string name="tvEventName">Large Text</string>
    <string name="tvPlace">Place</string>
    <string name="etPlaceName">Type a place name</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>